# elfhack

./: CMakeLists.txt  LICENSE  Makefile  README.md  elfhack.c
.github/workflows/: linux.yml
include/elfhack/: elf_utils.h  misc.h  options.h  utils.h
src/: basic_defs.h  cmds.h  elf_types.h  elf_utils.c  elf_utils.h  elfhack.c  misc.c  misc.h  misc_cmds.c  options.h  relocs_cmds.c  section_cmds.c  segment_cmds.c  symbol_cmds.c  utils.c  utils.h
